--- a/package.json
+++ b/package.json
@@ -4,5 +4,24 @@
   "main": "index.js",
   "repository": "https://github.com/wdi-sg/project-2.git",
   "author": "Prima Aulia Gusta <primaulia@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.3",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.4",
+    "flash": "^1.1.0",
+    "mongo-connect": "^0.0.6",
+    "mongoose": "^4.11.4",
+    "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
+  },
+  "scripts": {
+    "start": "nodemon index"
+  }
 }
