--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "osmosis": "^1.1.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "socket.io": "^2.0.3"
+    "socket.io": "^2.0.3",
+    "twilio": "^3.6.6"
   },
   "scripts": {
     "start": "nodemon app"
