--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-plumber": "^1.1.0",
     "http": "^0.0.0",
     "https": "^1.0.0",
+    "method-override": "^2.3.9",
     "mongo-connect": "^0.0.6",
     "mongoose": "^4.11.4",
     "nodemon": "^1.11.0",
