--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "dotenv": "^4.0.0",
+    "eslint": "^4.7.1",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.4",
@@ -36,5 +37,10 @@
   },
   "devDependencies": {
     "gulp-nodemon": "^2.2.1"
+  },
+  "standard": {
+    "globals": [
+      "$"
+    ]
   }
 }
