--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "author": "Prima Aulia Gusta <primaulia@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@types/osmosis": "^1.0.0",
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^1.3.2",
     "dotenv": "^4.0.0",
-    "eslint": "^4.7.1",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.4",
@@ -20,23 +18,28 @@
     "gulp": "^3.9.1",
     "gulp-livereload": "^3.8.1",
     "gulp-plumber": "^1.1.0",
-    "http": "^0.0.0",
-    "https": "^1.0.0",
     "method-override": "^2.3.9",
     "mongo-connect": "^0.0.6",
     "mongoose": "^4.11.4",
     "nodemon": "^1.11.0",
-    "osmosis": "^1.1.4",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "socket.io": "^2.0.3",
     "twilio": "^3.6.6"
   },
   "scripts": {
-    "start": "nodemon app"
+    "start": "nodemon app",
+    "test": "standard && NODE_ENV=test mocha test/test"
   },
   "devDependencies": {
-    "gulp-nodemon": "^2.2.1"
+    "standard": "*",
+    "chai": "^4.1.2",
+    "gulp-nodemon": "^2.2.1",
+    "http": "^0.0.0",
+    "https": "^1.0.0",
+    "mocha": "^3.5.3",
+    "osmosis": "^1.1.4",
+    "socket.io": "^2.0.3",
+    "supertest": "^3.0.0"
   },
   "standard": {
     "globals": [
